--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
-    <string name="field_name">Name</string>
+    <string name="field_first_name">First Name</string>
+    <string name="field_last_name">Last Name</string>
 
     <string name="button_submit">Salvar</string>
 </resources>
